19 (#22)
* Refactor code structure for improved readability and maintainability

* feat: implement authentication flow with login and wallet screens

* Add initial backend and React Native mobile app

Introduce backend configuration, database migration scripts, and test settings for a currency exchange API. Add a new React Native mobile application with Android and iOS setup, navigation, authentication context, wallet and exchange screens, and supporting configuration and test files. Also include legacy mobile code in a separate directory for reference.

* czyszczenie

* Add error handling to walletService methods

Updated walletService to handle errors during API calls.

* Enhance WalletScreen UI and improve walletService API calls

Updated WalletScreen with improved header, subtitle, and styling for a better user experience. Modified walletService to use the correct '/wallets/me' endpoint and added error handling for API calls. Added @testing-library/react-native as a dev dependency.

* Update walletService.ts

* jest fix

* lst fix

* Update walletService.ts

* 123

* Add exchange, top-up, and transaction history features

Implemented controllers and DTOs for currency exchange, wallet top-up, and transaction history in the backend. Updated database schema for higher precision and naming consistency. Improved security config for mobile compatibility. On the mobile side, added registration, top-up, and transaction history screens, updated navigation, and improved API configuration for Android/iOS. Enhanced wallet and exchange logic for better user experience and error handling.